--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
+    compile 'com.google.firebase:firebase-ads:9.8.0'
     testCompile 'junit:junit:4.12'
 }
 
