--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,16 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.google.android.gms:play-services:9.6.0'
     compile 'com.google.firebase:firebase-auth:9.6.0'
@@ -36,7 +41,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.0'
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.3.+'
-
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     testCompile 'junit:junit:4.12'
 }
 
