--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,8 @@
         <activity
             android:name=".PrivacyPolicyActivity"
             android:label="Privacy Policy"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme"
+             />
         <activity
             android:name=".BrandHomeActivity"
             android:label="My Campaign"
@@ -59,10 +60,13 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".InfLoginActivity"></activity>
+        <activity android:name=".InfLoginActivity" />
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
+        <activity android:name=".BrandDetailActivity"></activity>
     </application>
 
 </manifest>
