--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,8 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".AddCampaignActivity"></activity>
+        <activity android:name=".AddCampaignActivity" />
+        <activity android:name=".CampaignAddPhotoActivity"></activity>
     </application>
 
 </manifest>
