--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.google.firebase:firebase-ads:9.6.0'
     compile 'com.google.firebase:firebase-core:9.6.0'
     compile 'com.google.firebase:firebase-storage:9.6.0'
+    compile 'com.firebaseui:firebase-ui-database:0.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:25.0.1'
     compile 'com.android.support:support-fragment:25.0.1'
