--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".AddCampaignActivity" />
-        <activity android:name=".CampaignAddPhotoActivity"></activity>
+        <activity android:name=".CampaignAddPhotoActivity" />
+        <activity android:name=".BCampaignDetailActivity"></activity>
     </application>
 
 </manifest>
