--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':facebook-android-sdk-4.17.0', ':account-kit-sdk-4.17.0', ':picasso-2.5.2'
+include ':app', ':facebook-android-sdk-4.17.0', ':account-kit-sdk-4.17.0', ':picasso-2.5.2', ':PayPalAndroidSDK-2.15.1'
